--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div>
     <div>
       <p>
-        dirección:<br />
+        Dirección:<br />
         <input type="radio" id="derecha" value="1" v-model.number="direccion" />
         <label for="derecha">⟳</label>
         <input
