--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div>
       <div>
         <p>
-          Dirección:<br />
+          dirección:<br />
           <input
             type="radio"
             id="derecha"
