--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
         <p>{{ this.dias }}</p>
       </div>
     </div>
-    <div>
+    <div style="flex-grow: 1;">
       <svg
-        :width="dim.ancho / 2"
-        :height="dim.alto / 2"
-        viewBox="0 0 1285 1285"
+        width="100%"
+        height="100%"
+        :viewBox="`0 0 ${dim.ancho} ${dim.alto}`"
         xmlns="http://www.w3.org/2000/svg"
         xmlns:xlink="http://www.w3.org/1999/xlink"
       >
