--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
         <p>{{ this.dias }}</p>
       </div>
     </div>
-    <div style="flex-grow: 1;">
+    <div>
       <svg
-        width="100%"
-        height="100%"
+        :width="dim.ancho"
+        :height="dim.alto"
         :viewBox="`0 0 ${dim.ancho} ${dim.alto}`"
         xmlns="http://www.w3.org/2000/svg"
         xmlns:xlink="http://www.w3.org/1999/xlink"
