listar fechas estaciones 01

--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
         <p>{{ this.fechaInicio }}</p>
         <p>{{ this.fechaFin }}</p>
         <p>{{ this.dias }}</p>
+        <p>🐇: {{ this.estaciones }}</p>
+        <p>🔥:</p>
+        <p>🍂:</p>
+        <p>❄️:</p>
       </div>
     </div>
     <div>
